--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,9 @@
     "paths": {
       "@abstractuic/monitor-flow": ["../abstractuic/monitor-flow/src/index.ts"],
       "@abstractuic/monitor-flow/*": ["../abstractuic/monitor-flow/src/*"],
+      "@abstractuic/panel-chat": ["../abstractuic/panel-chat/src/index.ts"],
+      "@abstractuic/panel-chat/*": ["../abstractuic/panel-chat/src/*"],
+      "@abstractutils/monitor-gpu": ["../abstractuic/monitor-gpu/src/index.d.ts"],
       "react": ["./node_modules/@types/react/index.d.ts"],
       "react/jsx-runtime": ["./node_modules/@types/react/jsx-runtime.d.ts"],
       "react/jsx-dev-runtime": ["./node_modules/@types/react/jsx-dev-runtime.d.ts"]
@@ -26,4 +29,3 @@
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
-
