--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dev": "vite --host --port 3001",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "start": "node ./bin/cli.js",
     "test": "vitest run",
     "prepublishOnly": "npm run build"
   },
