--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,8 @@
       "reactflow": ["./node_modules/reactflow/dist/esm/index.d.ts"],
       "reactflow/*": ["./node_modules/reactflow/*"],
       "react": ["./node_modules/@types/react/index.d.ts"],
+      "react-dom": ["./node_modules/@types/react-dom/index.d.ts"],
+      "react-dom/client": ["./node_modules/@types/react-dom/client.d.ts"],
       "react/jsx-runtime": ["./node_modules/@types/react/jsx-runtime.d.ts"],
       "react/jsx-dev-runtime": ["./node_modules/@types/react/jsx-dev-runtime.d.ts"]
     }
