--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,15 @@
       "@abstractuic/ui-kit": ["../abstractuic/ui-kit/src/index.ts"],
       "@abstractuic/ui-kit/*": ["../abstractuic/ui-kit/src/*"],
       "@abstractutils/monitor-gpu": ["../abstractuic/monitor-gpu/src/index.d.ts"],
+      "@abstractframework/monitor-active-memory": ["../abstractuic/monitor-active-memory/src/index.ts"],
+      "@abstractframework/monitor-active-memory/*": ["../abstractuic/monitor-active-memory/src/*"],
+      "@abstractframework/monitor-flow": ["../abstractuic/monitor-flow/src/index.ts"],
+      "@abstractframework/monitor-flow/*": ["../abstractuic/monitor-flow/src/*"],
+      "@abstractframework/panel-chat": ["../abstractuic/panel-chat/src/index.ts"],
+      "@abstractframework/panel-chat/*": ["../abstractuic/panel-chat/src/*"],
+      "@abstractframework/ui-kit": ["../abstractuic/ui-kit/src/index.ts"],
+      "@abstractframework/ui-kit/*": ["../abstractuic/ui-kit/src/*"],
+      "@abstractframework/monitor-gpu": ["../abstractuic/monitor-gpu/src/index.d.ts"],
       "reactflow": ["./node_modules/reactflow/dist/esm/index.d.ts"],
       "reactflow/*": ["./node_modules/reactflow/*"],
       "react": ["./node_modules/@types/react/index.d.ts"],
